--- a/index.html
+++ b/index.html
@@ -13,10 +13,17 @@
 <body>
   <header>
     <nav>
-      <a href="#home">Home</a>
-      <a href="#about">About</a>
-      <a href="#projects">Projects</a>
-      <a href="#services">Services</a>
+      <div class="burger-menu">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+      </div>
+      <div class="nav-links">
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#projects">Projects</a>
+        <a href="#services">Services</a>
+      </div>
     </nav>
   </header>
 
@@ -65,22 +72,27 @@
       <div class="project" data-category="web">
         <h3>Portfolio Website</h3>
         <p>Personal portfolio with dark theme and metal aesthetics</p>
+        <button class="view-project">View Project</button>
       </div>
       <div class="project" data-category="web">
         <h3>E-commerce Platform</h3>
         <p>Custom online store with responsive design</p>
+        <button class="view-project">View Project</button>
       </div>
       <div class="project" data-category="security">
         <h3>Network Security Implementation</h3>
         <p>Comprehensive network security setup for small businesses</p>
+        <button class="view-project">View Project</button>
       </div>
       <div class="project" data-category="security">
         <h3>Firewall Configuration</h3>
         <p>Custom firewall rules and security policies</p>
+        <button class="view-project">View Project</button>
       </div>
       <div class="project" data-category="security">
         <h3>Security Audit</h3>
         <p>Vulnerability assessment and penetration testing</p>
+        <button class="view-project">View Project</button>
       </div>
     </div>
   </section>
